# torchrdit

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  Demo-01.ipynb  Demo-02.ipynb  Demo-03.ipynb  README.md  context7.json  generate_docs.py  pydoc-markdown.yml  pylint.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: Demo-01.py  Demo-01a-fluent.py  Demo-01a-function.py  Demo-01a.py  Demo-01b-fluent.py  Demo-01b-function.py  Demo-01b.py  Demo-02.ipynb  Demo-02.py  Demo-02a.py  Demo-02b.py  Demo-03.py  Demo-03a.py  Demo-03b.py  Demo-04.ipynb  Demo-04.py  config_demo_03.json  example_gds_export.py  example_gmrf_dispersive.py  example_gmrf_rdit.py  example_gmrf_variable_optimize.py  example_source_batching.py  source_batching_advanced.py  source_batching_basic.py  source_batching_performance.py  source_batching_tutorial.ipynb
torchrdit/: __init__.py  algorithm.py  builder.py  cell.py  constants.py  layers.py  logger.py  material_proxy.py  materials.py  observers.py  rcwa.py  results.py  shapes.py  solver.py  utils.py  viz.py
unittest/: test_algorithm.py  test_batched_results_examples.py  test_batching_golden_values.py  test_builder.py  test_builder_schema_keys.py  test_builder_strictness.py  test_cell.py  test_cell_examples.py  test_config_io.py  test_constants_examples.py  test_device_builder_fallback.py  test_device_cell_fallback.py  test_device_config_integration.py  test_device_public_api.py  test_device_resolution.py  test_device_solver_init_fallback.py  test_device_utils_fallback.py  test_device_warning_contract.py  test_gds.py  (+65 more)
(+111 files in other folders)
